--- a/ProjectFolder/public/styles.css
+++ b/ProjectFolder/public/styles.css
@@ -517,9 +517,14 @@ body {
 }
 
 .reservation-details-arena h2, .reservation-details-right h2 { 
-    color: gray;
+    color: black;
     font-size: 16px; 
     font-weight: 350;
+}
+
+.reservation-details-arena h3 {
+    color: black;
+    font-size: 18px; 
 }
 
 .reservation-buttons {
@@ -554,13 +559,22 @@ body {
 }
 
 .cancel-reservation {
-    color: black;
-    text-decoration: none; 
-    transition: background-color 1.3s ease;
+    border: none;
+    background: none;
+    padding: 0;
+    color: inherit;
+    cursor: pointer;
+    font-family: "Montserrat", sans-serif;
 }
 
-.cancel-reservation:hover {
-    color: #EE2121;
+.cancel-reservation h4 {
+    margin: 0;
+    font-size: 14px;
+    color: #f44336;
+}
+
+.cancel-reservation h4:hover {
+    text-decoration: underline;
 }
 
 /*modify reservation page*/
@@ -697,13 +711,13 @@ body {
     color: #F41A1A !important;
 }
 
-.right-update a {
+.right-update button {
     text-decoration: none !important;
     font-family: 'Montserrat', sans-serif;
     color: white !important;
 }
 
-.right-update a {
+.right-update button {
     width: 12rem;
     background-color: black;
     border: 1px solid black;
@@ -718,16 +732,15 @@ body {
     justify-content: center;
 }
 
-.right-update a:hover {
+.right-update button:hover {
     background-color: white; 
     color: black !important;
 }
 
-
-
 .buttons-content {
     justify-content: space-around;
 }
+
 
 /* login page  */
 
@@ -1961,4 +1974,68 @@ body {
     left: 25rem;
     display: flex;
     gap: 5rem;
+}
+
+/*ALERT*/
+
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    margin-bottom: 15px;
+    border-top-left-radius: 5px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.closebtn:hover {
+    color: black;
+}
+
+/*SEAT CHECKBOXES*/
+
+.seat-label {
+    display: inline-block;
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    width: 40px;
+}
+
+.reserved-seat {
+    background-color: #f44336;
+    color: white;
+    cursor: not-allowed;
+}
+
+.conflict-seat {
+    background-color: yellow;
+    color: black;
+}
+
+.selected-seat {
+    background-color: green;
+    color: white;
+}
+
+.seat-label input {
+    display: none;
+}
+
+.seat-numbers {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
