--- a/ProjectFolder/views/profile_current_reservation_page.hbs
+++ b/ProjectFolder/views/profile_current_reservation_page.hbs
@@ -1,7 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="all" href="/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <title>Current Reservations</title>
+</head>
 <body>
-
     <!-- Navigation Bar -->
-    {{> header headerClass="profile-page-header" navClass="profile-page-navbar" title="Information"}}
+    {{> header headerClass="profile-page-header" navClass="profile-page-navbar" title="Current Reservations"}}
 
     <div class="profile-page-content">
         <div class="profile-left-page">
@@ -24,98 +35,64 @@
         </div>
         <div class="reservation-profile-right-page">
             <div class="profile-picture-upload">
-                <div class="profile-picture-label">
+                <label class="profile-picture-label">
                     <img src="{{#if user.profilePicture}}/profilepics/{{user.profilePicture}}{{else}}/images/default-user.png{{/if}}" alt="Profile Picture" id="profile-picture">
-                </div>
+                </label>
             </div>
             <div class="profile-details">
                 <h4>User ID: {{user._id}}</h4>
-                <h2>Current Reservation</h2>
+                <h2>Current Reservations</h2>
             </div>
+
+            {{#each reservations}}
+            {{#unless this.removed}}
             <div class="reservation-box">
                 <div class="reservation-id">
-                    <h3>Reservation #123456</h3>
+                    <h3>Reservation #{{this._id}}</h3>
                 </div>
                 <div class="reservation-details">
                     <div class="reservation-details-right">
-                        <h2>May 29, 2024 3:00 PM - 3:30 PM</h2>
+                        <h2>{{formatDate this.reservationStart}} - {{formatDate this.reservationEnd}}</h2>
+                        <h2>Reservation Time: {{formatTime this.reservationStart}} - {{formatTime this.reservationEnd}}</h2>
                     </div>
                 </div>
                 <div class="reservation-details-arena">
-                    <h2>Crypto.com Arena</h2>
+                    <h2>{{this.stadium.name}}</h2>
+                </div>
+                <div class="reservation-seat-numbers">
+                    <h2>Seat Numbers: {{this.seatNumber}}</h2>
                 </div>
                 <div class="reservation-buttons">
-                    <a href="/modify_reservation_page" class="modify-reservation">
-                        <h4>Modify Reservation</h4>
-                    </a>
-                    <a href="" class="cancel-reservation">
+                        <a href="/modify_reservation_page/{{this._id}}?ref=profile_current_reservation" class="modify-reservation">
+                            <h4>Modify Reservation</h4>
+                        </a>
+                    <button onclick="cancelReservation('{{this._id}}')" class="cancel-reservation" style="border: none; background: none; padding: 0;">
                         <h4>Cancel Reservation</h4>
-                    </a>
+                    </button>
                 </div>  
             </div>
-            <div class="reservation-box">
-                <div class="reservation-id">
-                    <h3>Reservation #1235456</h3>
-                </div>
-                <div class="reservation-details">
-                    <div class="reservation-details-right">
-                        <h2>May 30, 2024 4:00 PM - 4:30 PM</h2>
-                    </div>
-                </div>
-                <div class="reservation-details-arena">
-                    <h2>Crypto.com Arena</h2>
-                </div>
-                <div class="reservation-buttons">
-                    <a href="/modify_reservation_page" class="modify-reservation">
-                        <h4>Modify Reservation</h4>
-                    </a>
-                    <a href="" class="cancel-reservation">
-                        <h4>Cancel Reservation</h4>
-                    </a>
-                </div>  
-            </div>
-            <div class="reservation-box">
-                <div class="reservation-id">
-                    <h3>Reservation #1212356</h3>
-                </div>
-                <div class="reservation-details">
-                    <div class="reservation-details-right">
-                        <h2>May 1, 2024 7:00 PM - 7:30 PM</h2>
-                    </div>
-                </div>
-                <div class="reservation-details-arena">
-                    <h2>Crypto.com Arena</h2>
-                </div>
-                <div class="reservation-buttons">
-                    <a href="/modify_reservation_page" class="modify-reservation">
-                        <h4>Modify Reservation</h4>
-                    </a>
-                    <a href="" class="cancel-reservation">
-                        <h4>Cancel Reservation</h4>
-                    </a>
-                </div>  
-            </div>
-            <div class="reservation-box">
-                <div class="reservation-id">
-                    <h3>Reservation #1212356</h3>
-                </div>
-                <div class="reservation-details">
-                    <div class="reservation-details-right">
-                        <h2>May 2, 2024 1:00 PM - 1:30 PM</h2>
-                    </div>
-                </div>
-                <div class="reservation-details-arena">
-                    <h2>Crypto.com Arena</h2>
-                </div>
-                <div class="reservation-buttons">
-                    <a href="/modify_reservation_page" class="modify-reservation">
-                        <h4>Modify Reservation</h4>
-                    </a>
-                    <a href="" class="cancel-reservation">
-                        <h4>Cancel Reservation</h4>
-                    </a>
-                </div>  
-            </div>
+            {{/unless}}
+            {{/each}}
         </div>
     </div>
+
+    <script>
+        function cancelReservation(id) {
+            if (confirm('Are you sure you want to cancel this reservation?')) {
+                fetch(`/cancel_reservation/${id}`, {
+                    method: 'PUT'
+                })
+                .then(response => response.json())
+                .then(data => {
+                    if (data.success) {
+                        alert('Reservation cancelled successfully.');
+                        location.reload();
+                    } else {
+                        alert('Error cancelling reservation.');
+                    }
+                });
+            }
+        }
+    </script>
 </body>
+</html>
