--- a/ProjectFolder/views/view_available_page.hbs
+++ b/ProjectFolder/views/view_available_page.hbs
@@ -29,8 +29,8 @@
                     <option value="3:00 PM - 3:30 PM">3:00 PM - 3:30 PM</option>
                     <option value="3:30 PM - 4:00 PM">3:30 PM - 4:00 PM</option>
                     <option value="4:00 PM - 4:30 PM">4:00 PM - 4:30 PM</option>
-                     <option value="4:30 PM - 5:00 PM">4:30 PM - 5:00 PM</option>
-                     <option value="5:00 PM - 5:30 PM">5:00 PM - 5:30 PM</option>                   
+                    <option value="4:30 PM - 5:00 PM">4:30 PM - 5:00 PM</option>
+                    <option value="5:00 PM - 5:30 PM">5:00 PM - 5:30 PM</option>                   
                 </select>
             </div>
         </div>
@@ -41,33 +41,87 @@
         </div>
         <div class="reserve-seat-chart">
             <div class="reserve-left-column">
-                <button class="reserve-seat reserve-available" id="D1" onclick="handleSeatClick(this)">D1</button>
-                <button class="reserve-seat reserve-available" id="D2" onclick="handleSeatClick(this)">D2</button>
-                <button class="reserve-seat reserve-available" id="D3" onclick="handleSeatClick(this)">D3</button>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="D1" onclick="handleSeatClick(this)">D1</button>
+                    <span class="tooltiptext"></span>
+                </div>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="D2" onclick="handleSeatClick(this)">D2</button>
+                    <span class="tooltiptext"></span>
+                </div>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="D3" onclick="handleSeatClick(this)">D3</button>
+                    <span class="tooltiptext"></span>
+                </div>
             </div>
             <div class="reserve-center-column">
                 <div class="reserve-row">
-                    <button class="reserve-seat reserve-available" id="A1" onclick="handleSeatClick(this)">A1</button>
-                    <button class="reserve-seat reserve-available" id="A2" onclick="handleSeatClick(this)">A2</button>
-                    <button class="reserve-seat reserve-available" id="A3" onclick="handleSeatClick(this)">A3</button>
-                    <button class="reserve-seat reserve-available" id="A4" onclick="handleSeatClick(this)">A4</button>
-                    <button class="reserve-seat reserve-available" id="A5" onclick="handleSeatClick(this)">A5</button>
-                    <button class="reserve-seat reserve-available" id="A6" onclick="handleSeatClick(this)">A6</button>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A1" onclick="handleSeatClick(this)">A1</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A2" onclick="handleSeatClick(this)">A2</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A3" onclick="handleSeatClick(this)">A3</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A4" onclick="handleSeatClick(this)">A4</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A5" onclick="handleSeatClick(this)">A5</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="A6" onclick="handleSeatClick(this)">A6</button>
+                        <span class="tooltiptext"></span>
+                    </div>
                 </div>
                 <div class="reserve-court">COURT</div>
                 <div class="reserve-row">
-                    <button class="reserve-seat reserve-available" id="C1" onclick="handleSeatClick(this)">C1</button>
-                    <button class="reserve-seat reserve-available" id="C2" onclick="handleSeatClick(this)">C2</button>
-                    <button class="reserve-seat reserve-available" id="C3" onclick="handleSeatClick(this)">C3</button>
-                    <button class="reserve-seat reserve-available" id="C4" onclick="handleSeatClick(this)">C4</button>
-                    <button class="reserve-seat reserve-available" id="C5" onclick="handleSeatClick(this)">C5</button>
-                    <button class="reserve-seat reserve-available" id="C6" onclick="handleSeatClick(this)">C6</button>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C1" onclick="handleSeatClick(this)">C1</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C2" onclick="handleSeatClick(this)">C2</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C3" onclick="handleSeatClick(this)">C3</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C4" onclick="handleSeatClick(this)">C4</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C5" onclick="handleSeatClick(this)">C5</button>
+                        <span class="tooltiptext"></span>
+                    </div>
+                    <div class="tooltip-container">
+                        <button class="reserve-seat reserve-available" id="C6" onclick="handleSeatClick(this)">C6</button>
+                        <span class="tooltiptext"></span>
+                    </div>
                 </div>
             </div>
             <div class="reserve-right-column">
-                <button class="reserve-seat reserve-available" id="B1" onclick="handleSeatClick(this)">B1</button>
-                <button class="reserve-seat reserve-available" id="B2" onclick="handleSeatClick(this)">B2</button>
-                <button class="reserve-seat reserve-available" id="B3" onclick="handleSeatClick(this)">B3</button>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="B1" onclick="handleSeatClick(this)">B1</button>
+                    <span class="tooltiptext"></span>
+                </div>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="B2" onclick="handleSeatClick(this)">B2</button>
+                    <span class="tooltiptext"></span>
+                </div>
+                <div class="tooltip-container">
+                    <button class="reserve-seat reserve-available" id="B3" onclick="handleSeatClick(this)">B3</button>
+                    <span class="tooltiptext"></span>
+                </div>
             </div>
         </div>
     </div>
@@ -93,10 +147,17 @@
         const allSeats = document.querySelectorAll('.reserve-seat');
         allSeats.forEach(seat => {
             seat.classList.remove('reserve-available', 'reserve-reserved', 'reserve-selected');
+            const tooltip = seat.nextElementSibling;
             if (reservedSeats.includes(seat.id)) {
                 seat.classList.add('reserve-reserved');
+                if (tooltip) {
+                    tooltip.innerHTML = 'This seat has been reserved by User';
+                }
             } else {
                 seat.classList.add('reserve-available');
+                if (tooltip) {
+                    tooltip.innerHTML = '';
+                }
             }
         });
     }
